Bug 93315 - Calc: Print Preview empty with a 100 bordered rows. Works, if row 85 is without borders
Summary: Calc: Print Preview empty with a 100 bordered rows. Works, if row 85 is witho...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: Other All
: medium minor
Assignee: Czeber László Ádám (NISZ)
URL:
Whiteboard: target:24.2.0
Keywords:
Depends on:
Blocks: Print-Preview
  Show dependency treegraph
 
Reported: 2015-08-10 06:44 UTC by ralf.krapf
Modified: 2023-07-25 04:56 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Print preview OK (113.98 KB, image/png)
2015-08-10 06:49 UTC, ralf.krapf
Details
PRint preview wrong (159.04 KB, image/png)
2015-08-10 06:49 UTC, ralf.krapf
Details

Note You need to log in before you can comment on or make changes to this bug.
Description ralf.krapf 2015-08-10 06:44:46 UTC
Hi

This Bug is in LO 4.4.5.2 and LO 5.0.0.5 under W7 64bit.

Steps to reproduce:
- Create a new Calc file
- Mark Cell A1 to B10 and choose borders: all borders.
- So, all marked cells are bordered
-> Go to print preview -> looks ok.
- Mark Cell A1 to B100 and choose borders : all borders.
- So, all marked cells are bordered
-> Go to print preview -> shows "no data" (German: "Keine Daten")

Have a look at the screenshots for understanding.

Cheers
Ralf
Comment 1 ralf.krapf 2015-08-10 06:49:18 UTC
Created attachment 117797 [details]
Print preview OK
Comment 2 ralf.krapf 2015-08-10 06:49:38 UTC
Created attachment 117798 [details]
PRint preview wrong
Comment 3 raal 2015-08-21 09:16:37 UTC
Reproducible with Version: 5.1.0.0.alpha1+
Build ID: 6b7354ae66db40246a09e00aa876443057655a43
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2015-08-19_01:05:16

and LibreOffice 3.5.0 Build ID: d6cde02
Comment 4 QA Administrators 2016-09-20 10:25:55 UTC Comment hidden (obsolete)
Comment 5 ralf.krapf 2016-09-20 17:29:38 UTC Comment hidden (obsolete)
Comment 6 ralf.krapf 2016-09-20 17:30:17 UTC Comment hidden (obsolete)
Comment 7 ralf.krapf 2016-09-20 20:00:05 UTC Comment hidden (obsolete)
Comment 8 Hb 2017-01-07 06:54:31 UTC Comment hidden (no-value)
Comment 9 ralf.krapf 2017-01-08 11:01:00 UTC Comment hidden (no-value)
Comment 10 Zineta 2017-01-12 14:52:58 UTC
Tried to reproduce: it seems that 85th row is problem.You can select all columns
and exclude 85th row selecting it and set no border.No Data in Print Preview disappeared.Also, Preview is ok  when any cell before 86th row is set bordered.
Reproduced in 5.1.6.2 ,5.4.0.0.alpha0+
Comment 11 Buovjaga 2017-01-13 12:57:08 UTC
(In reply to Zineta from comment #10)
> Tried to reproduce: it seems that 85th row is problem.You can select all
> columns
> and exclude 85th row selecting it and set no border.No Data in Print Preview
> disappeared.Also, Preview is ok  when any cell before 86th row is set
> bordered.
> Reproduced in 5.1.6.2 ,5.4.0.0.alpha0+

Confirmed.

Arch Linux 64-bit, KDE Plasma 5
Version: 5.4.0.0.alpha0+
Build ID: 2fd88ab1cbb4690a770ca2ca5d66157ec4906a2e
CPU Threads: 8; OS Version: Linux 4.8; UI Render: default; VCL: kde4; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group
Built on January 12th 2016

Arch Linux 64-bit
LibreOffice 3.3.0 
OOO330m19 (Build:6)
tag libreoffice-3.3.0.4
Comment 12 QA Administrators 2018-06-28 02:47:16 UTC Comment hidden (obsolete)
Comment 13 Xavier Van Wijmeersch 2018-06-28 13:32:35 UTC
removing the borders from row 85 and then reinsert the borders give me a preview of two pages

Version: 6.2.0.0.alpha0+
Build ID: e5c8f2ba40223b67c7205b6f06da3aa344ed0e97
CPU threads: 8; OS: Linux 4.14; UI render: default; VCL: kde4; 
Locale: nl-BE (en_US.UTF-8); Calc: group threaded
Comment 14 Zineta 2018-07-25 13:14:17 UTC
I tested, reinserting the borders was not successful, behavior is the same in new daily Version: 6.2.0.0.alpha0+ (x64)
Build ID: 7119184f4b5441600f7b3eae7ec6771c094bbb7f
CPU threads: 2; OS: Windows 6.1; UI render: default; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2018-07-23_05:38:07
Locale: bs-BA (bs_BA); Calc: group threaded


Set border from A1 to F100
Print Preview shows only columns where 85th cell is  with no border. 
But when only A85 with no border and added  G85 cell with  border
 shows all  columns.(moved to right: instead A85-F85 with border  B85-G85 )
Comment 15 QA Administrators 2019-07-30 03:12:29 UTC Comment hidden (obsolete)
Comment 16 Timur 2019-08-28 10:42:36 UTC Comment hidden (obsolete)
Comment 17 Roman Kuznetsov 2021-05-14 22:17:01 UTC
In 7.2 it shows "No data" in Print Preview with any number of cells with borders but without data

bug 142278 looks as dupe of this bug
Comment 18 ralf.krapf 2022-05-24 09:48:05 UTC
Still present in LO 7.3.3.2
Comment 19 Sophie Sipasseuth 2023-05-15 08:30:56 UTC
Repro

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: daf30c29be67b8b8fa361b0efd1a6cdbe087b6f8
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: fr-FR (fr_FR); UI: fr-FR
Calc: CL threaded
Comment 20 Czeber László Ádám (NISZ) 2023-06-16 10:09:36 UTC
Related source line in /sc/source/core/data/attarray.cxx:

// size (rows) of a range of attributes after cell content where the search is stopped
// (more than a default page size, 2*42 because it's as good as any number)
const SCROW SC_VISATTR_STOP = 84;

SCROW nAttrSize = mvData[nEndPos].nEndRow + 1 - nAttrStartRow;
if ( nAttrSize >= SC_VISATTR_STOP )
    break;  // while, ignore this range and below
Comment 21 Eike Rathke (retired, only occasionally showing up) 2023-06-19 09:58:56 UTC
And dropping that is not a good idea,
see https://gerrit.libreoffice.org/c/core/+/153256/comment/4c28a8d1_d10e4d88/
Comment 22 Czeber László Ádám (NISZ) 2023-06-19 13:25:04 UTC
Reproduce this bug:
Calc (LO 7.6): Show only 84 rows in the Print Preview
Excel (Office 2019): Show all 100 rows

tdf46738 test file:
Calc (LO 7.6): Show only 7 rows, and 3 columns (adjusted to the last data cell)
Excel (Office 2019): Show all rows and columns (regardless of the position of the last data cell)

In my opinion, you should either display all rows in the Print Preview, as Excel does (unless, of course, it applies to all rows), or only display the last row and column of data (then, for example, you can print the required part of the empty cells by writing a space in the last cell).
Comment 23 Commit Notification 2023-07-24 22:33:22 UTC
Czeber László Ádám committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/87ca7d2f146be2c309fc6fd36f9154f3ea4e4bd8

tdf#93315 sc: Only 84 empty row show in the Print Preview

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.